--- a/ytube/style.css
+++ b/ytube/style.css
@@ -1,25 +1,18 @@
-<style>
-div { max-width: 840px; }
-div.content > div.player {
-  background-color: red;
-}
-.player {
-  position: relative;
-  width: calc(100% - 2rem);
-  padding-bottom: 56.25%;
-  height 0;
+div {
+  color: rgb(95,94,96);
+  max-width: 860px;
 }
 .player iframe{
   position: absolute;
   top:0;
   left: 0;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 2rem - 8px);
+  height: calc(100% - 2rem - 8px);
 }
 #player {
   border: 1px red solid;
-  max-height: 96vh;
+  //max-height: 96vh;
   border: 4px blue dotted;
   padding: 1rem;
 }
