--- a/ytube/_layouts/default.html
+++ b/ytube/_layouts/default.html
@@ -20,9 +20,9 @@ var list = [ "{{vlist[-1]}}",{% for vid in vlist limit:99 %}"{{vid}}",{%endfor%}
 {{content}}
 </div>
 
-<br><div class="second">
+<br><div class="second content">
 {% for vid in site.data.lists[page.list] %}
-{% if vid begins "Qm" %} <a href="http://gateway.ipfs.io/ipfs/{{vid}}">{{vid}}</a>
+{% if vid contains "Qm" %} <a href="http://gateway.ipfs.io/ipfs/{{vid}}">{{vid}}</a>
 {% else %}<a target="top" href="{{dot}}ytnoad.htm#{{vid}}"><img title="#{{forloop.index}}" alt="{{vid}}" src="https://i.ytimg.com/vi/{{vid}}/default.jpg"></a>{% endif %}{% endfor %}
 </div>
 
